# MinRender

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.txt
.claude/: settings.local.json
cmake/: MacOSXBundleInfo.plist.in
docs/: CNAME  _config.yml  appcast-win.xml  appcast.xml  configure.md  index.md  install.md  job-templates.md  llm.md  monitor.md  qt-port-plan.md  submit.md  templates.md
docs/_sass/custom/: setup.scss
installer/: minrender_installer.iss
minrender-tray/: Package.swift
minrender-tray/Sources/: MinRenderTray.swift
mr-agent/: Cargo.toml
mr-agent/src/: executor.rs  kill.rs  main.rs
mr-agent/src/ipc/: mod.rs  unix.rs  windows.rs
resources/: minrender.rc
resources/icons/: MinRender.ai  MinRenderWindows.ai  mR_logo.ai  mR_tray.ai  minRenderMacOS.ai  minRenderWindows.ai  minrender.icns
resources/icons/new/: MinRenderWindows.ai
resources/plugins/afterEffects/: MinRender.jsx
resources/plugins/blender/: MinRender.py
resources/plugins/cinema4d/: MinRender.py
resources/templates/: after-effects-union.json  blender-5.1-union.json  cinema4d-2026-all-options.json
resources/templates/backups/: blender-5.0-all-options.json
resources/templates/plugins/: after-effects-plugin.json  blender-5.1-plugin.json  cinema4d-2026-plugin.json
scripts/: build_msvc.bat  fetch_sparkle.sh  macos-release.sh  package.bat  update_appcast.sh  update_appcast_win.sh
src/core/: config.h  http_server.cpp  http_server.h  ipc_server.cpp  ipc_server.h  job_types.h  monitor_log.cpp  monitor_log.h  node_identity.cpp  path_mapping.h  peer_info.h  platform.cpp  platform.h  single_instance.cpp  single_instance.h  system_tray.cpp  system_tray.h  udp_notify.h  ui_ipc_server.cpp  ui_ipc_server.h
src/monitor/: agent_supervisor.cpp  agent_supervisor.h  database_manager.cpp  database_manager.h  dispatch_manager.cpp  dispatch_manager.h  farm_init.cpp  main.cpp  main_headless.cpp  main_qt.cpp  monitor_app.cpp  monitor_app.h  node_failure_tracker.h  peer_manager.cpp  peer_manager.h  render_coordinator.cpp  render_coordinator.h  rndr_supervisor.cpp  rndr_supervisor.h  submission_watcher.cpp  template_manager.cpp  template_manager.h
src/monitor/ui/: dashboard.cpp  farm_cleanup_dialog.cpp  job_detail_panel.cpp  job_detail_panel.h  job_list_panel.cpp  log_panel.cpp  log_panel.h  node_panel.cpp  settings_panel.cpp  settings_panel.h  style.cpp  style.h  ui_macros.h
src/preview/: exr_image_loader.cpp  exr_image_loader.h  image_loader.cpp  image_loader.h  jpeg_image_loader.cpp  jpeg_image_loader.h  memory_mapped_istream.cpp  memory_mapped_istream.h  png_image_loader.cpp  png_image_loader.h  thumbnail_image_provider.cpp  thumbnail_image_provider.h  tiff_image_loader.cpp  tiff_image_loader.h
src/restart/: main.cpp
src/ui/: app_bridge.cpp  app_bridge.h
src/ui/models/: chunks_model.cpp  chunks_model.h  jobs_model.cpp  jobs_model.h  log_model.cpp  log_model.h  nodes_model.cpp  nodes_model.h  templates_model.cpp  templates_model.h
src/ui/painters/: frame_grid.cpp  frame_grid.h
src/ui/platform/: accent_color.cpp  accent_color.h  color_space.cpp  color_space.h  color_space_mac.mm  title_bar.cpp  title_bar.h  tray.cpp  tray.h
src/ui/qml/: Format.qml  Main.qml  PhosphorIcons.js  Theme.qml
src/ui/qml/components/: FlatButton.qml  Icon.qml  MrDialog.qml  MrScrollBar.qml  PanelHeader.qml  Progress.qml  ResizableHeaderLabel.qml  SectionHeader.qml  StatusBadge.qml  ToolStrip.qml
src/ui/qml/panels/: FarmCleanupDialog.qml  JobDetailPanel.qml  JobListPanel.qml  JobPreview.qml  LogPanel.qml  NodePanel.qml  PathMappingsDialog.qml  SettingsPanel.qml  SubmissionForm.qml
src/ui/updater/: app_updater.h  sparkle_updater.h  sparkle_updater_macos.mm  winsparkle_updater_windows.cpp
